--- a/templates/display_tables.html
+++ b/templates/display_tables.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- {% autoescape false %} -->
 <html lang="en">
 
 <head>
@@ -107,3 +108,4 @@
 </body>
 
 </html>
+<!-- {% endautoescape %} -->
