--- a/templates/tables_before_after.html
+++ b/templates/tables_before_after.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- {% autoescape false %} -->
 <html lang="en">
 
 <head>
@@ -132,3 +133,4 @@
 </body>
 
 </html>
+<!-- {% endautoescape %} -->
