fixed column shuffle issue, edge cases.

--- a/templates/mail.html
+++ b/templates/mail.html
@@ -65,11 +65,11 @@
             <input type="hidden" name='search_key' value={{search_key}}>
 
             <button type="submit" name="add_mail">
-                Add To List
+                Add
             </button>
 
             <button type="submit" name="remove_mail">
-                Remove From List
+                Remove
             </button>
 
             
@@ -94,7 +94,7 @@
             
             
             <button type="submit" name={{op}} >
-                {{op}}- Execute
+                Execute
             </button>
 
         </form>
