--- a/templates/mail.html
+++ b/templates/mail.html
@@ -114,8 +114,9 @@
         <form action="/alumni/mail/send" method="POST">
             <input type="text" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
             placeholder="Subject" style="height: 40px; width: 500px;" name="subject">
-            <input type="text" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-            placeholder="Body" style="height: 300px; width: 500px; margin-top: 25px; padding-top: px;" name="body" >
+            <textarea type="text" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            placeholder="Body" style="height: 300px; width: 500px; margin-top: 25px;" name="body" >
+            </textarea>
             <button type="submit" name="send_mail" style="margin-top: 25px">Send The Mail</button>
         </form>
     </div>
