--- a/templates/display_entries.html
+++ b/templates/display_entries.html
@@ -89,30 +89,20 @@
 
         {% if display_edit_buttons=="ADMIN" %}
         
-        <div class="container my-6 mx-auto">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="d-flex">
-                        <div>
-                            <form action="/tables/edit" method="POST">
-                                <button type="submit" name="insert" value={{table_name}}>Insert</button>
-                                <button type="submit" name="update" value={{table_name}}>Update</button>
-                                <button type="submit" name="delete" value={{table_name}}>Delete</button>
-                                <button type="submit" name="rename" value={{table_name}}>Rename</button>
-                                <button type="submit" name="search" value={{table_name}}>Search</button>
-                                <button type="submit" name="download" value={{table_name}}>Download Table</button>
-                                <button type="submit" name="upload" value="{{table_name}}">Upload Entries as File</button>
-                            </form>
-                        </div>
-                        <br>
-                        <div class="ml-auto">
-                            <form action="/tables" method="GET">
-                                <button type="submit">Go to Tables List</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="flex flex-col ">
+            <form action="/tables/edit" method="POST">
+                <button type="submit" name="insert" value={{table_name}}>Insert</button>
+                <button type="submit" name="update" value={{table_name}}>Update</button>
+                <button type="submit" name="delete" value={{table_name}}>Delete</button>
+                <button type="submit" name="rename" value={{table_name}}>Rename</button>
+                <button type="submit" name="search" value={{table_name}}>Search</button>
+                <button type="submit" name="download" value={{table_name}}>Download Table</button>
+                <button type="submit" name="upload" value="{{table_name}}" class="my-2">Upload Entries as File</button>
+            </form>
+
+            <form action="/tables" method="GET" class="w-full mx-auto">
+                <button type="submit">Go to Tables List</button>
+            </form>
         </div>
 
         {% elif display_edit_buttons=="EMP" %}
