--- a/templates/errors.html
+++ b/templates/errors.html
@@ -1,5 +1,5 @@
+{% autoescape false %}
 <!DOCTYPE html>
-<!-- {% autoescape false %} -->
 <html lang="en">
 
 <head>
@@ -45,4 +45,4 @@
 </body>
 
 </html>
-<!-- {% endautoescape %} -->
+{% endautoescape %}
