--- a/templates/tables_before_after.html
+++ b/templates/tables_before_after.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- {% autoescape false %} -->
+{% autoescape true %}
 <html lang="en">
 
 <head>
@@ -144,4 +144,4 @@
 </body>
 
 </html>
-<!-- {% endautoescape %} -->
+{% endautoescape %}
