--- a/templates/display_tables.html
+++ b/templates/display_tables.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- {% autoescape false %} -->
+{% autoescape true %}
 <html lang="en">
 
 <head>
@@ -108,4 +108,4 @@
 </body>
 
 </html>
-<!-- {% endautoescape %} -->
+{% endautoescape %}
