--- a/templates/mail.html
+++ b/templates/mail.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% autoescape true %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -159,3 +160,4 @@
     
 </body>
 </html>
+{% endautoescape %}
